[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cln-rpc = "0.5.0"
tokio = { version = "1", features = ["rt"] }
url = "2.5.7"
secp256k1 = "0.31.1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"